--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,27 @@ body{
     background-color: #f4f4f4;
 
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
 }
 
-.content{
+.header-container{
     width: 80%;
     margin: auto;
+}
+
+#main-header{
+    background-color: coral;
+    color: #fff;
+}
+
+#main{
+    width: 70%;
+}
+
+#main-footer{
+    background: #333;
+    color: #fff;
+    text-align: center;
+    margin-top: 40px;
+    padding: 20px;
 }
