--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body{
 .header-container{
     width: 80%;
     margin: auto;
+    overflow: hidden;
 }
 
 #main-header{
@@ -17,6 +18,8 @@ body{
 
 #main{
     width: 70%;
+    margin: auto;
+    padding:0 30px;
 }
 
 #main-footer{
